sandbox/output
TicketDispenserTest.java:24: error: cannot find symbol
        assertEquals(1,ticketFromAnotherDispenser-previousTicketFromDispenser);       
                       ^
  symbol:   variable ticketFromAnotherDispenser
  location: class TicketDispenserTest
TicketDispenserTest.java:24: error: cannot find symbol
        assertEquals(1,ticketFromAnotherDispenser-previousTicketFromDispenser);       
                                                  ^
  symbol:   variable previousTicketFromDispenser
  location: class TicketDispenserTest
2 errors
